syntax = "proto3";

package service.ourchat.webrtc.room.kick_user.v1;

message KickUserFromRoomRequest {
  uint64 room_id = 1;
  uint64 user_id = 2;
}

message KickUserFromRoomResponse {
  bool success = 1;
}
